# hyperflux-next

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-DECISION.md  README.md  SECURITY.md  SUPPORT.md  hfx
.devcontainer/: Containerfile  README.md  devcontainer.json
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md  release.yml
LICENSES/: MIT.txt  README.md
apps/: README.md
architecture/: README.md  constitution.json  repository-atlas.json
assurance/: README.md  dependencies.json  design-coverage.json  formal-model.json  performance-budgets.json  release-gates.json
crates/: README.md
crates/hfx-bridge/: Cargo.toml  README.md
crates/hfx-bridge/src/: actor.rs  backend.rs  clock.rs  connection.rs  framing.rs  generation.rs  lib.rs  observation.rs  persistence.rs  profile_authority.rs  restoration_runtime.rs  rpc.rs  runtime_identity.rs  session.rs  session_registry.rs  snapshot.rs  staged_events.rs  subscriptions.rs
crates/hfx-bridge/tests/: clock.rs  connection_runtime.rs  core_backend.rs  file_persistence.rs  generation_orchestration.rs  lifecycle_observation.rs  profile_authority.rs  rpc_dispatch.rs  rpc_framing.rs  runtime_identity.rs  session_contract.rs  session_registry.rs  snapshot_projection.rs  subscriptions.rs
crates/hfx-core/: Cargo.toml  README.md
crates/hfx-core/src/: coordinator.rs  diagnostics.rs  events.rs  leases.rs  lib.rs  lifecycle.rs  ports.rs  receiver_registry.rs  transactions.rs
crates/hfx-core/src/restoration/: engine.rs  intent.rs  mod.rs
crates/hfx-core/tests/: coordinator.rs  events_and_diagnostics.rs  leases.rs  lifecycle.rs  ports.rs  receiver_registry.rs  restoration.rs  transactions.rs
crates/hfx-core/tests/common/: mod.rs
crates/hfx-daemon/: Cargo.toml  README.md
crates/hfx-daemon/src/: authority.rs  configuration.rs  discovery.rs  entropy.rs  identity.rs  lib.rs  logging.rs  main.rs  manager.rs  observation.rs  production.rs  production_restoration.rs  restoration.rs  service.rs  socket.rs
crates/hfx-integration-model/: Cargo.toml
crates/hfx-integration-model/src/: generated.rs  lib.rs  view.rs
crates/hfx-integration-model/tests/: catalog.rs  view_model.rs
crates/hfx-kernel-transport/: Cargo.toml  README.md
crates/hfx-kernel-transport/src/: encoder.rs  error.rs  generated.rs  io.rs  ioctl_sys.rs  lib.rs  observation.rs  reader.rs  router.rs  transport.rs
crates/hfx-kernel-transport/tests/: adapter.rs
crates/hfx-ops/: Cargo.toml
crates/hfx-ops/src/: activation.rs  assessment.rs  configuration.rs  lib.rs  probe.rs  qualification.rs  qualification_server.rs  support.rs
crates/hfx-protocol/: Cargo.toml
crates/hfx-protocol/src/: framing.rs  generated.rs  generated_v1.rs  generated_v2.rs  generated_v3.rs  generated_v4.rs  generated_v5.rs  generated_versions.rs  lib.rs  negotiation.rs  snapshot.rs  validation.rs  wire.rs
crates/hfx-protocol/tests/: protocol.rs  wire_and_snapshot.rs
crates/hfx-sdk/: Cargo.toml  README.md
crates/hfx-sdk/src/: channel.rs  client.rs  error.rs  identity.rs  lib.rs
crates/hfx-sdk/tests/: sdk_contract.rs
crates/hfx-sim/: Cargo.toml  README.md
crates/hfx-sim/src/: clock.rs  engine.rs  event.rs  lib.rs  persistence.rs  replay.rs  restoration.rs  shadow.rs  state.rs  transport.rs
crates/hfx-sim/tests/: generation_and_evidence.rs  replay.rs  restoration_crash.rs  shadow.rs  state_and_qualification.rs  transport_and_restore.rs  transport_journal.rs
crates/hfx-sim/tests/common/: mod.rs
docs/: README.md  portal.json
driver/: README.md
errors/: README.md  catalog.json
governance/: README.md  github.json  licensing.json
integrations/: README.md  catalog.json
integrations/openrazer/compatibility/: LICENSE  pyproject.toml
integrations/openrazer/compatibility/hyperflux_openrazer_compat/: __init__.py  cli.py  contract.py  generated_contract.py  matrix.py  model.py  runtime.py  service.py  session.py
integrations/openrgb/: CMakeLists.txt  README.md  hyperflux-next-openrgb.json.in
integrations/openrgb/include/hyperflux/openrgb/: build_config.hpp.in  controller_model.hpp  controller_registry.hpp  dispatch_queue.hpp  inventory_model.hpp  native_command.hpp  native_controller.hpp  plugin_application.hpp  plugin_coordinator.hpp  plugin_runtime.hpp  plugin_view_model.hpp  razer_registry.hpp  runtime_bridge.hpp  runtime_core.hpp  runtime_worker.hpp
integrations/openrgb/src/: controller_model.cpp  controller_registry.cpp  dispatch_queue.cpp  inventory_model.cpp  native_command.cpp  native_controller.cpp  openrgb_plugin.cpp  plugin_application.cpp  plugin_coordinator.cpp  plugin_runtime.cpp  plugin_view_model.cpp  plugin_widget.cpp  plugin_widget.hpp  qt_dispatcher.cpp  qt_dispatcher.hpp  razer_registry.cpp  runtime_bridge.cpp  runtime_core.cpp  runtime_dispatch.cpp  runtime_events.cpp  runtime_internal.hpp  runtime_sessions.cpp  runtime_worker.cpp
integrations/polychromatic/: README.md  pyproject.toml
integrations/polychromatic/hyperflux_polychromatic/: __init__.py  _version.py  backend.py  runtime.py  state.py
integrations/polychromatic/patches/: 0001-discover-native-backends.patch
knowledge/: README.md  candidate-links.json  capability-map.json  reviewed-facts.json
migration/: README.md  ledger.json  sources.json
packaging/: README.md  distributions.json  install.json
profiles/: README.md  capabilities.json
protocol/: README.md  catalog.json  registry.json
runtime/: README.md  linux.json  local-companion.json
schemas/: README.md  architecture-constitution.schema.json  bridge-config.schema.json  candidate-catalog.schema.json  (+47 more)
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/hyperflux/: sdk.hpp
sdk/cpp/include/hyperflux/sdk/: channel.hpp  client.hpp  clock.hpp  error.hpp  identity.hpp  lighting.hpp  recovery.hpp  result.hpp
sdk/cpp/src/: channel.cpp  client.cpp  clock.cpp  identity.cpp  lighting.cpp  recovery.cpp
sdk/python/: README.md  pyproject.toml
sdk/python/hyperflux_sdk/: __init__.py  _version.py  channel.py  client.py  codec.py  errors.py  identity.py  lighting.py  recovery.py
(+254 files in other folders)
