[workspace]
members = ["crates/hfx-bridge", "crates/hfx-core", "crates/hfx-domain", "crates/hfx-errors", "crates/hfx-profiles", "crates/hfx-protocol", "crates/hfx-sdk", "crates/hfx-sim"]
resolver = "3"

[workspace.package]
version = "0.0.0-dev.1"
edition = "2024"
rust-version = "1.95"
license = "GPL-2.0-only"
publish = false

[workspace.dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
rustix = { version = "=1.1.4", features = ["fs", "process", "rand", "time"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
