[package]
name = "hfx-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-core = { path = "../hfx-core" }
hfx-domain = { path = "../hfx-domain" }
hfx-errors = { path = "../hfx-errors" }
hfx-protocol = { path = "../hfx-protocol" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
