[package]
name = "hfx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-domain = { path = "../hfx-domain" }
hfx-protocol = { path = "../hfx-protocol" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
