[package]
name = "hfx-integration-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-domain = { path = "../hfx-domain" }
hfx-profiles = { path = "../hfx-profiles" }
hfx-protocol = { path = "../hfx-protocol" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
