[package]
name = "hfx-kernel-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-core = { path = "../hfx-core" }
hfx-domain = { path = "../hfx-domain" }
hfx-profiles = { path = "../hfx-profiles" }
hfx-protocol = { path = "../hfx-protocol" }
rustix.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
