[package]
name = "hfx-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-domain = { path = "../hfx-domain" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
