[package]
name = "hfx-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hfx-domain = { path = "../hfx-domain" }
hfx-profiles = { path = "../hfx-profiles" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
